engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
/* ... */
// Default ajax search form
.main-search--form {
	.unitize-padding(8, 10, 8, 10, 16);
	.box-shadow(0 6px 6px -6px @lightTextColor);
	background: #fff;
	border-bottom: 1px solid @borderColor;
	width: 100%;
    left: 0;
    position: absolute;

	.icon--search {
		.unitize(22, 16, top);
		.unitize(22, 16, left);
		position: absolute;
	}

	.main-search--field {
		.unitize-padding(10, 10, 10, 38, 16);
		width: 100%;
	}
	.main-search--button { display: none; }

}

// Loading indicator for css animations supported browsers
.has--cssanimations {
    .form--ajax-loader {
        .unitize(10, 16, top);
        .unitize(10, 16, right);
        position: absolute;
        display: none;

        &::before {
            .unitize-width(16);
            .unitize-height(16);
            .border-radius(100%);
            .animation(keyframe--spin 1s linear infinite);

            display: block;
            content: "";
            border: 2px solid #ccc;
            border-top: 2px solid #333;
        }
    }
}

// Loading indicator for non css animations supported browsers
.has--no-cssanimations {
    .form--ajax-loader {
        .unitize(14, 16, top);
        .unitize(10, 16, right);
        .unitize-width(16);
        .unitize-height(16);
        position: absolute;
        display: none;
        background-image: url('../../img/icons/loading-indicator.gif');
    }
}

// Search results modal
.main-search--results {
    .clearfix();
    .unitize(107, 16, top);
    position: absolute;
    width: 100%;
    left: 0;
    background: #fff;
    text-align: left;
    z-index: 100;
}

.results--list {
    .unitize-padding(10, 15);
    .box-shadow(0 2px 3px 1px lighten(@borderColor, 5%));
    border-top: 1px solid @borderColor;
    border-bottom: 1px solid @borderColor;
    background: #fff;

    &::after {
        .rotate(135deg);
        .unitize-width(15);
        .unitize-height(15);
        .unitize(-8, 16, top);
        content: '';
        display: block;
        position: absolute;
        background: #fff;
        left: 48%;
        border: 1px solid @borderColor;
        border-top: 0 none;
        border-right: 0 none;
    }

    .list--entry,
    .entry--all-results {
        .unitize-padding(6, 0);
    }

    .list--entry {
        .unitize(30, 16, line-height);
        border-bottom: 1px solid @borderColor;

        &:last-child {
            border: 0 none;
        }

        &:hover {
            background: lighten(@borderColor, 10%);
            color: @primaryColor;

            .entry--name a { color: @primaryColor }
        }

    }

    .entry--no-results {
        width: 100%;
        text-align: center;
        list-style: none;
        font-weight: normal;
    }

    .is-active {
        background: lighten(@borderColor, 10%);
        color: @primaryColor;

        .entry--name a { color: @primaryColor }
    }

    .entry--media { width: 10%; min-width:10% }

    .entry--name {
        width: 60%;

        a { color: @primaryTextColor }
    }

    .entry--price,
    .entry--all-results-number {
        width: 30%;
        text-align: right;
        color: @primaryColor;
    }

    .entry--all-results-link,
    .entry--all-results-number {
        display: block;
    }
    .entry--all-results {
        .unitize(10, 16, padding-top);
        font-weight: normal;
    }

    .entry--all-results-link {
        width: 70%;

        .icon--arrow-right {
            .unitize(-1, 16, top);
            .unitize-margin(0, 8, 0, 0);
            position: relative;
        }
    }

    .entry--all-results-number {
        font-weight: normal;
    }
}
/* ... */

